Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/040_expected_2_given0.xi
f()

g()
{
    x:int, y:int = f()
}
//@PRACOWNIA
//@should_not_typecheck
